# LakeSuperiorStream

./: README.md
LakeSuperiorStream/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  DataField.h  IReader.h  ISample.h  ResearcherSample.cpp  ResearcherSample.h  SampleType.h  Searcher.cpp  Searcher.h  SensorSample.cpp  SensorSample.h  Stream.cpp  Stream.h  StreamGUI.cpp  StreamGUI.h  Time.cpp  Time.h  imGUIHeader.h  main.cpp
LakeSuperiorStream/TestData/RSamples/: chesterCreek_ChemistryObservations.csv  tischerCreek_ChemistryObservations_Through2016.csv
LakeSuperiorStream/TestData/SSamples/: Tischer2007_CompleteData.csv  Tischer2010_CompleteData.csv  Tischer2014_CompleteData.csv  Tischer2018-19_CompleteData.csv  Tischer2020_CompleteData.csv
LakeSuperiorStream/tests/: Time_Test.cpp  reader_test.cpp  sample_test.cpp  searcher_test.cpp  stream_test.cpp
